test/message/vm_syntax_error.out
bar:1
invalid ?= 1
         ^
SyntaxError: Unexpected token =
    at context.run (*test*message*vm_syntax_error.js:*:*)
    at foo:1:1
